basic template and test script

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </div>
     <div id="right">
       <h3>Follow a Pomodoro</h3>
-      <button id="start-button">+</button>
+      <button id="pomodoro">+</button>
     </div>
   </div>
   <script src="script.js"></script>
