pomodoro function first local draft

--- a/popup.html
+++ b/popup.html
@@ -15,9 +15,9 @@
     </div>
     <div id="right">
       <h3>Follow a Pomodoro</h3>
-      <button id="pomodoro">+</button>
+      <button id="pomodoro" onclick=document.getElementById"pomodoro".inne>+</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="pomodoro.js"></script>
 </body>
 </html>
