first cyclic timer css with correct logical statment

--- a/popup.html
+++ b/popup.html
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My pomodoro</title>
-  <link rel="stylesheet" href="popup.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Pomodoro</title>
+  <link rel="stylesheet" href="popup.css" />
+  <style>
+    /* Countdown Styles */
+    #countdown-wrapper {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+    }
+
+    .timer-circle {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      border: 8px solid #3182ce;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      font-weight: bold;
+      color: #2b6cb0;
+    }
+
+    .phase-label {
+      margin-top: 12px;
+      font-size: 18px;
+      color: #4a5568;
+    }
+  </style>
 </head>
 <body>
   <div id="popup-container">
     <div id="left">
       <h3>Focus Time</h3>
-      <input type="number" id="hours" placeholder="Hours" min="0">
-      <input type="number" id="minutes" placeholder="Minutes" min="0">
+      <input type="number" id="hours" placeholder="Hours" min="0" />
+      <input type="number" id="minutes" placeholder="Minutes" min="0" />
     </div>
     <div id="right">
       <h3>Follow a Pomodoro</h3>
-      <button id="pomodoro" onclick=document.getElementById"pomodoro".inne>+</button>
+      <button id="pomodoro">+</button>
     </div>
   </div>
+
+  <div id="countdown-wrapper">
+    <div class="timer-circle" id="timer">--:--</div>
+    <div class="phase-label" id="phase-label">Starting...</div>
+  </div>
+
   <script src="pomodoro.js"></script>
 </body>
 </html>
