--- a/popup.html
+++ b/popup.html
@@ -5,36 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Pomodoro</title>
   <link rel="stylesheet" href="popup.css" />
-  <style>
-    /* Countdown Styles */
-    #countdown-wrapper {
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-    }
-
-    .timer-circle {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      border: 8px solid #3182ce;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      font-weight: bold;
-      color: #2b6cb0;
-    }
-
-    .phase-label {
-      margin-top: 12px;
-      font-size: 18px;
-      color: #4a5568;
-    }
-  </style>
 </head>
 <body>
   <div id="popup-container">
@@ -49,10 +19,10 @@
     </div>
   </div>
 
-  <div id="countdown-wrapper">
+  <!-- <div id="countdown-wrapper">
     <div class="timer-circle" id="timer">--:--</div>
     <div class="phase-label" id="phase-label">Starting...</div>
-  </div>
+  </div> -->
 
   <script src="pomodoro.js"></script>
 </body>
